[gd_scene load_steps=5 format=3 uid="uid://brf1rgu45pejc"]

[ext_resource type="Script" uid="uid://buu4ky3lxsp5" path="res://scripts/ui/combat/stats/stats_panel.gd" id="1"]
[ext_resource type="Script" uid="uid://cndxk3hgaoli5" path="res://scripts/ui/combat/stats/metric_tabs.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://cthp37obhaka7" path="res://scenes/ui/stats/Scoreboard.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/stats/UnitPanel.tscn" id="4"]

[node name="StatsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 58
metadata/_edit_use_anchors_ = true

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox/Header"]
layout_mode = 2
text = "Team Metrics"

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WindowAll" type="Button" parent="VBox/Header"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "All"

[node name="Window3s" type="Button" parent="VBox/Header"]
layout_mode = 2
toggle_mode = true
text = "3s"

[node name="MetricTabs" type="Control" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("2")

[node name="Body" type="Control" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scoreboard" parent="VBox/Body" instance=ExtResource("3")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="UnitPanel" parent="VBox/Body" instance=ExtResource("4")]
visible = false
